--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             overflow: hidden;
         }
         .footer-84not {
-            padding: 40px 0;
+            padding: 50px 0 20px 0;
         }
         .footer-content {
             display: flex;
