--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
             overflow: hidden;
         }
         .footer-84not {
-            padding: 50px 0 20px 0;
+            padding: 50px 0 30px 0;
         }
         .footer-content {
+            /* background-color: turquoise; */
             display: flex;
             justify-content: space-between;
             flex-direction: row;
+            border-top: 1px solid rgba(133, 133, 133, 0.5);
         }
         .footer-content a {
             text-decoration: none;
@@ -114,14 +116,14 @@
             <div class="footer-content">
                 <p><a id="brand-link" href="#" target="_blank" rel="noopener noreferrer">84NOT™</a></p>
                 <div class="footer-social">
-                    <a href="#" target="_blank" rel="noopener noreferrer" data-tooltip="Facebook">
+                    <a href="https://www.facebook.com/profile.php?id=61585242086479" target="_blank" rel="noopener noreferrer" data-tooltip="Facebook">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" data-tooltip="Instagram">
+                    <a href="#" target="_blank" rel="noopener noreferrer" data-tooltip="Comming Soon">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" data-tooltip="X (Twitter)">
-                        <i class="fa-brands fa-x-twitter"></i>
+                    <a href="#" target="_blank" rel="noopener noreferrer" data-tooltip="Threads">
+                        <i class="fa-brands fa-threads"></i>
                     </a>
                 </div>
             </div>
