--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <style>
         body {
-            background-color: transparent;
+            background-color: transparent !important;
             padding: 0;
             margin: 0;
             box-sizing: border-box;
