--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <style>
         body {
-            /* background-color: transparent !important; */
+            background-color: transparent;
             padding: 0;
             margin: 0;
             box-sizing: border-box;
@@ -161,3 +161,4 @@
 </body>
 
 </html>
+
