--- a/index.html
+++ b/index.html
@@ -7,130 +7,149 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/phosphor-icons@1.4.2/src/css/icons.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/phosphor-icons@1.4.2/src/index.min.js"></script> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <!-- Sử dụng Font Awesome 6.x ổn định hơn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    
     <style>
-        body {
-            background: transparent;
+        /* QUAN TRỌNG: Cả html và body phải transparent */
+        html, body {
+            background-color: transparent !important;
             padding: 0;
             margin: 0;
             box-sizing: border-box;
             overflow: hidden;
+            font-family: "Space Grotesk", sans-serif;
         }
+
+        :root {
+            --text-color: #858585;
+            --border-color: rgba(133, 133, 133, 0.3);
+            --hover-bg: #ffffff;
+            --hover-text: #000000;
+            --tooltip-bg: #333;
+        }
+
+        /* TỰ ĐỘNG THAY ĐỔI KHI NOTION Ở CHẾ ĐỘ DARK MODE */
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --text-color: #9b9b9b;
+                --border-color: rgba(255, 255, 255, 0.15);
+                --hover-bg: #373737; /* Màu nền hover tối cho hợp Notion */
+                --hover-text: #ffffff;
+                --tooltip-bg: #f9f9f9;
+            }
+        }
+
         .footer-84not {
-            padding: 50px 0 30px 0;
+            padding: 30px 0; /* Giảm bớt padding để fit iframe Notion */
         }
+
         .footer-content {
-            /* background-color: turquoise; */
             display: flex;
             justify-content: space-between;
+            align-items: center;
             flex-direction: row;
-            border-top: 1px solid rgba(133, 133, 133, 0.5);
+            border-top: 1px solid var(--border-color);
+            padding-top: 15px;
         }
+
         .footer-content a {
             text-decoration: none;
-            color: #858585;
-            /* font-weight: 500; */
-            font-family: "Space Grotesk", sans-serif;
-            letter-spacing: -5%;
+            color: var(--text-color);
+            transition: all 0.3s ease;
         }
         
-        .footer-content i {
-            font-size: 24px;
+        #brand-link {
+            font-weight: 500;
         }
+
         .footer-social {
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 15px;
         }
+
         .footer-social a {
-            padding: 5px;
-            border-radius: 12px;
-            transition: color 0.3s, transform 0.3s, box-shadow 0.3s;
+            font-size: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 35px;
+            height: 35px;
+            border-radius: 10px;
             position: relative;
         }
+
+        /* Tooltip */
         .footer-social a::after {
             content: attr(data-tooltip);
             position: absolute;
-            bottom: 100%;
+            bottom: 120%;
             left: 50%;
             transform: translateX(-50%);
-            background-color: #333;
-            color: white;
-            padding: 5px 10px;
-            border-radius: 12px;
-            font-family: "Space Grotesk", sans-serif;
+            background-color: var(--tooltip-bg);
+            color: var(--hover-text);
+            padding: 4px 8px;
+            border-radius: 6px;
             font-size: 10px;
             white-space: nowrap;
             opacity: 0;
             pointer-events: none;
             transition: opacity 0.3s;
-            margin-bottom: 5px;
         }
-        .footer-social a::before {
-            content: '';
-            position: absolute;
-            bottom: calc(100% - 5px);
-            left: 50%;
-            transform: translateX(-50%);
-            border: 5px solid transparent;
-            border-top-color: #333;
-            opacity: 0;
-            pointer-events: none;
-            transition: opacity 0.3s;
+
+        .footer-social a:hover {
+            background-color: var(--hover-bg);
+            color: var(--hover-text);
+            transform: translateY(-3px);
         }
-        .footer-social a:hover::after,
-        .footer-social a:hover::before {
+
+        .footer-social a:hover::after {
             opacity: 1;
         }
-        .footer-social a:hover {
-            background-color: #ffffff;
-            color: #000000;
-            transform: translateY(-5px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
+
         #brand-link::after {
             content: '|';
             animation: blink 1s infinite;
+            margin-left: 2px;
         }
+
         @keyframes blink {
             0%, 50% { opacity: 1; }
             51%, 100% { opacity: 0; }
         }
-    </style>
-    <style>
-        @media (max-width: 768px) {
-            .footer-content i {
-                font-size: 18px;
+
+        @media (max-width: 480px) {
+            .footer-content {
+                flex-direction: column;
+                gap: 15px;
+                text-align: center;
             }
         }
     </style>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/phosphor-icons@1.4.2/src/index.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/phosphor-icons@1.4.2/src/index.min.js"></script>
     <div class="container">
         <footer class="footer-84not">
             <div class="footer-content">
-                <p><a id="brand-link" href="#" target="_blank" rel="noopener noreferrer">84NOT™</a></p>
+                <p><a id="brand-link" href="#" target="_blank">84NOT™</a></p>
                 <div class="footer-social">
-                    <a href="https://www.facebook.com/profile.php?id=61585242086479" target="_blank" rel="noopener noreferrer" data-tooltip="Facebook">
+                    <a href="https://fb.com/..." target="_blank" data-tooltip="Facebook">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" data-tooltip="Comming Soon">
+                    <a href="#" target="_blank" data-tooltip="Instagram">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer" data-tooltip="Threads">
+                    <a href="#" target="_blank" data-tooltip="Threads">
                         <i class="fa-brands fa-threads"></i>
                     </a>
                 </div>
             </div>
         </footer>
     </div>
+
     <script>
-        function typeWriter(element, text, speed = 100, callback) {
+        function typeWriter(element, text, speed = 80, callback) {
             element.textContent = '';
             let i = 0;
             const timer = setInterval(() => {
@@ -145,22 +164,19 @@
         }
 
         function animateText() {
+            const brandLink = document.getElementById("brand-link");
             setTimeout(() => {
-                typeWriter(document.getElementById("brand-link"), "Templates, Automation, Tools.", 100, () => {
+                typeWriter(brandLink, "Templates, Automation, Tools.", 70, () => {
                     setTimeout(() => {
-                        typeWriter(document.getElementById("brand-link"), "84NOT™", 100, () => {
-                            animateText(); // loop
+                        typeWriter(brandLink, "84NOT™", 100, () => {
+                            animateText(); 
                         });
                     }, 3000);
                 });
             }, 3000);
         }
 
-        animateText();
+        window.onload = animateText;
     </script>
 </body>
-
 </html>
-
-
-
