--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <style>
         /* QUAN TRỌNG: Cả html và body phải transparent */
-        html, body {
+        html, body.84not-footer {
             background-color: transparent !important;
             padding: 0;
             margin: 0;
@@ -128,7 +128,7 @@
         }
     </style>
 </head>
-<body>
+<body class="84not-footer">
     <div class="container">
         <footer class="footer-84not">
             <div class="footer-content">
@@ -180,3 +180,4 @@
     </script>
 </body>
 </html>
+
